#495 Default workspace path URL fix